--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Crie uma conta no GitHub para compartilhar o seu projeto.
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>JULIAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
